# aa-structures

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci-cd.yaml
docs/: conf.py  index.rst  operations.md  requirements.txt  user.md
structures/: __init__.py  admin.py  api.py  app_settings.py  apps.py  auth_hooks.py  checks.py  constants.py  forms.py  helpers.py  managers.py  openapi_2025-12-16.json  providers.py  tasks.py  urls.py  views.py
structures/core/: notification_resolver.py  notification_timers.py  notification_types.py  serializers.py  starbases.py
structures/core/notification_embeds/: __init__.py  billing_embeds.py  character_embeds.py  corporate_embeds.py  helpers.py  main.py  moonmining_embeds.py  orbital_embeds.py  skyhook_embeds.py  sov_embeds.py  structures_embeds.py  tower_embeds.py  war_embeds.py
structures/management/commands/: structures_load_eve.py  structures_preload_eveuniverse.py  structures_update_poco_planets.py
structures/migrations/: 0005_alter_webhook_notification_types.py  0006_ownercharacter_is_enabled.py  0007_ownercharacter_disabled_reason.py  0010_webhook_show_moons_values.py
structures/models/: __init__.py  notifications.py  owners.py  structures_1.py  structures_2.py
structures/templates/structures/: base.html  main.html  public.html  statistics.html  structures.html
structures/tests/: helpers.py  test_admin.py  test_api.py  test_helpers.py  test_integration.py  test_managers_1.py  test_managers_2.py  test_managers_3.py  test_tasks.py  test_views.py
structures/tests/core/: test_notification_structuretimers.py  test_notification_types.py  test_notifications_timerboard.py  test_notifications_timers.py  test_serializers.py  test_starbases.py
structures/tests/integration/: test_tasks.py  test_views.py
structures/tests/models/: test_eveuniverse.py  test_notifications_1.py  test_notifications_2.py  (+8 more)
structures/views/: common.py  public.py  statistics.py  status.py  structures.py
structures/webhooks/: core.py  managers.py  models.py
testauth/: celery.py  settings_core.py
testauth/settings_aa3/: local_core.py
testauth/settings_aa4/: base.py  local.py  local_all.py  local_core.py
testauth/settings_aa5/: local.py
tools/: drop_tables.sql
(+50 files in other folders)
