[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aa-structures"
dynamic = ["version", "description"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Erik Kalkoken", email = "erik.kalkoken@gmail.com" }]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "allianceauth-app-utils>=1.31",
    "allianceauth>=4,<6",
    "dhooks-lite>=1.0",
    "django-esi>=8,<10",
    "django-eveuniverse>=2",
    "django-multiselectfield",
    "django-navhelper",
    "humanize>=4.7",
    "pyyaml>=6",
    "redis-simple-mq>=1.1",
]

[project.optional-dependencies]
test = ["coverage", "factory_boy", "markdown", "pook"]

[project.urls]
Homepage = "https://github.com/AllianceAuth-Apps/aa-structures"
Documentation = "https://aa-structures.readthedocs.io"

[tool.flit.module]
name = "structures"

[tool.isort]
profile = "black"
multi_line_output = 3
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "DJANGO",
    "ALLIANCEAUTH",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
known_allianceauth = ["allianceauth", "app_utils"]
known_django = ["django", "django_webtest", "esi", "eveuniverse"]

[tool.pylint.'MASTER']
ignore-patterns = ["__init__.py", "auth_hooks.py", "apps.py", "admin.py"]
ignore-paths = ["^.*/tests/.*$", "^.*/migrations/.*$"]

[tool.pylint.'BASIC']
good-names = ["i", "j", "k", "x", "y", "z", "ex", "id"]

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "cyclic-import",
    "fixme",
    "import-outside-toplevel",
    "imported-auth-user",
    "no-member",
    "redefined-builtin",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-return-statements",
]
